Solve z-index issue with jQuery UI datepicker when used from custom dialog

--- a/assets/duplicator.css
+++ b/assets/duplicator.css
@@ -73,3 +73,8 @@
 #eventrocket_duplication_dialog p.action-btns button {
 	margin: 0 0.12rem;
 }
+
+#eventrocket_duplication_dialog #duplicate_start {
+	position: relative;
+	z-index: 200000; /* Encourage the datepicker dialog to use an appropriate z-index */
+}
